# jugal9124-AI-Powered-Video-Caption-Generator

./: README.md  app.py  pyproject.toml  requirements.txt
captions/: output.srt
